[package]
authors = ["Robert O'Callahan <robert@ocallahan.com>"]
categories = ["development-tools::debugging"]
description = "Evaluate the quality of debuginfo"
keywords = ["DWARF", "debug", "ELF"]
license = "MIT"
name = "debuginfo-quality"
readme = "./README.md"
repository = "https://github.com/rocallahan/debuginfo-quality"
version = "0.1.0"

[dependencies]
clap = "2.32.0"
cpp_demangle = { git = "https://github.com/khuey/cpp_demangle", branch = "downstream" }
fallible-iterator = "0.1.4"
derive_more = "0.13.0"
gimli = "0.16.1"
memmap = "0.6"
object = "0.10"
rayon = "1.0"
regex = "1"
structopt = "0.2"
typed-arena = "1"
